# bpi

./: TestRtkHDMICallbackNative  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/bpi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-yuv-to-buffer-lib.cpp
app/src/main/java/com/example/bpi/: AutoFitTextureView.java  AvcDecoder.java  AvcEncoder.java  Camera2Preview.java  CameraUtil.java  FrameData.java  MainActivity.java  SecondActivity.java
app/src/main/java/com/example/bpi/audio/: AudioRecordUtil.java  PCMEncoderAAC.java
app/src/main/java/com/example/bpi/rtp/: RtpAvcStream.java  RtpSenderWrapper.java  RtpSocketInter.java  RtpStream.java  RtpUdp.java
app/src/main/java/com/example/bpi/rtsp/: RTCPpacket.java  RTPpacket.java  RtcpReceiver.java  TestSever.java  VideoStream.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml  preview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bpi/: ExampleUnitTest.java
etc/: audio_policy.conf  event-log-tags  hosts  sepolicy.recovery
etc/firmware/: rtl8723d_fw  rtl8723ds_fw  rtl8761at_fw  rtl8761au_fw  rtl8761aw8192eu_fw  rtl8822b_fw  rtl8822bs_fw
etc/wifi/: wifi_module_mapper.json
gradle/wrapper/: gradle-wrapper.properties
